cabal-version: 3.4

name: experiments
version: 0.0.0.0

common common
  build-depends:
      Cabal
    , array
    , base >= 4.14.1.0
    , binary
    , bytestring
    , containers
    , deepseq
    , directory
    , exceptions
    , filepath
    , ghc
    , ghc-boot
    , ghc-boot-th
    , ghc-compact
    , ghc-heap
    , ghc-prim
    , ghci
    , haskeline
    , hpc
    , integer-gmp
    , libiserv
    , mtl
    , parsec
    , pretty
    , process
    , rts
    , stm
    , template-haskell
    , terminfo
    , text
    , time
    , transformers
    , unix
    , xhtml
  ghc-options:
      -Wall

library
  import:
      common
  hs-source-dirs:
      src
  exposed-modules:
      Experiments
